[package]
name = "learn-rust"
version = "0.1.0"
authors = ["Mattherix <mattherix@protonmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "learn-rust"
path = "src/guess-the-number.rs"

[[bin]]
name = "common-programming-concepts"
path = "src/common-programming-concepts.rs"

[dependencies]
rand = "^0.7.3"
