[package]
name = "learn-rust"
version = "0.1.0"
authors = ["Mattherix <mattherix@protonmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "learn-rust"
path = "src/guess-the-number.rs"

[[bin]]
name = "common-programming-concepts"
path = "src/common-programming-concepts.rs"

[[bin]]
name = "structures"
path = "src/structures.rs"

[[bin]]
name = "enums_pattern_matching"
path = "src/enums_pattern_matching.rs"

[[bin]]
name = "common_collections_vectors"
path = "src/common_collections_vectors.rs"

[lib]
name = "modules"
path = "src/modules.rs"

[dependencies]
rand = "^0.7.3"
